# reslt

./: .gitignore  AGENTS.md  Cargo.toml  readme.md
.github/workflows/: rust.yml
assets/: output.css
example/: Cargo.toml  Dioxus.toml  README.md  tailwind-safelist.txt  tailwind.config.js
example/assets/: output.css
example/example/assets/: output.css
example/src/: main.rs
example/src/pages/home/table/: mod.rs  modal.rs  service.rs  table_col.rs
examples/demo_app/: Cargo.toml  Dioxus.toml  package.json  tailwind.config.js
examples/demo_app/assets/: input.css  output.css  tailwind.css
examples/demo_app/src/: data.rs  lib.rs  main.rs
examples/demo_app/src/components/: checkbox.rs  form.rs  mod.rs  modal.rs  skeleton.rs  toast.rs
examples/demo_app/src/container/: container.rs
examples/demo_app/src/pages/: home.rs  mod.rs
examples/demo_table/: Cargo.toml  Dioxus.toml
examples/demo_table/src/: hard_data.rs  lib.rs  main.rs
examples/demo_table/src/components/: default_table.rs  mod.rs  modal_container.rs  toast_container.rs
examples/demo_table/src/pages/: app.rs  mod.rs
examples/demo_table/src/pages/home/: mod.rs
examples/demo_table/src/pages/home/table/: hard_data.rs  mod.rs  modal.rs  service.rs  table_col.rs  table_data.rs
reslt_cli/: Cargo.toml  README.md
reslt_cli/src/: command.rs  core.rs  main.rs
reslt_component/: Cargo.toml  README.md
reslt_component/src/registry/: mod.rs
reslt_component/src/registry/checkbox_default_rawcss/: checkbox.css  checkbox.rs  metadata.json  mod.rs
reslt_component/src/registry/checkbox_default_tailwind/: metadata.json
reslt_component/src/registry/modal_default_rawcss/: metadata.json  modal.css  modal.rs
reslt_component/src/registry/modal_default_tailwind/: metadata.json  modal.rs
reslt_component/src/registry/skeleton_default_rawcss/: metadata.json  skeleton.css  skeleton.rs
reslt_component/src/registry/skeleton_default_tailwind/: metadata.json
reslt_component/src/registry/table_default_rawcss/: metadata.json  table.css  table.rs
reslt_component/src/registry/table_default_tailwind/: metadata.json  table.rs
reslt_component/src/registry/toast_default_rawcss/: metadata.json  toast.css  toast.rs
reslt_component/src/registry/toast_default_tailwind/: metadata.json  toast.rs
reslt_core/: Cargo.toml
reslt_core/src/: lib.rs  prelude.rs
reslt_core/src/reslt_signal/: mod.rs
reslt_core/src/reslt_signal/checkbox/: checkbox_signal.rs  checkbox_signal_tests.rs  mod.rs
reslt_core/src/reslt_signal/modal/: mod.rs  modal_signal.rs  modal_signal_tests.rs
reslt_core/src/reslt_signal/table/: mod.rs  table_col.rs  table_data.rs  table_signal.rs  table_signal_tests.rs
reslt_core/src/reslt_signal/toast/: mod.rs  toast_signal.rs  toast_signal_tests.rs
reslt_derive/: Cargo.toml
reslt_derive/src/: field_accessible_logic.rs  lib.rs  utils.rs
src/: lib.rs  prelude.rs
src/components/: mod.rs
src/components/components_checkbox/: checkbox.rs  checkbox_config.rs  checkbox_signal.rs  checkbox_test.rs  mod.rs
src/components/components_modal/: mod.rs  modal.rs  modal_config.rs  modal_signal.rs  modal_test.rs
src/components/components_skeleton/: mod.rs  skeleton.rs  skeleton_config.rs
src/components/components_table/: mod.rs  table.rs  table_arrow_sort.rs  table_basic.rs  table_checkbox.rs  table_col.rs  table_config.rs  table_data.rs  table_dropdown.rs  table_paginate.rs  table_signal.rs  table_test.rs  table_trait.rs
src/components/components_toast/: mod.rs  toast.rs  toast_config.rs  toast_signal.rs  toast_test.rs
src/helper/: css.rs  mod.rs  tailwind.rs
