[package]
name = "reslt"
version = "0.1.0"
authors = ["lilidm <lightdemon17@gmail.com>"]
edition = "2021"

[dependencies]
async-std = "1.13.1"
dioxus = { version = "0.6", features = [] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
table_derive = { path = "./reslt_derive" }

[dev-dependencies]
dioxus-ssr = "0.4.0"
pretty_assertions = "1.4.0"
futures = "0.3.28"

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
