[workspace]
members = [
    "reslt_core",
    "reslt_derive",
    "examples/demo_table",
    "reslt_cli",
    "reslt_component"
]
resolver = "2"

[workspace.package]
name = "reslt"
version = "0.0.1"
authors = ["lilidm <lightdemon17@gmail.com>"]
edition = "2024"

[workspace.dependencies]
async-std = "1.13.1"
dioxus = { version = "0.7", features = [] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dev dependencies
dioxus-ssr = "0.7"
pretty_assertions = "1.4.0"
futures = "0.3.28"

# Features
[workspace.features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
