[workspace]
members = [
    "reslt_core",
    "reslt_derive",
    "examples/demo_app",
    "reslt_cli",
    "reslt_component"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["lilidm <lightdemon17@gmail.com>"]
edition = "2024"

[workspace.dependencies]
async-std = "1.13.1"
dioxus = { version = "0.7", features = [] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["std", "getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
# Dev dependencies
dioxus-ssr = "0.7"
pretty_assertions = "1.4.0"
futures = "0.3.28"
