[package]
name = "example"
version = "0.1.0"
authors = ["lilidm <lightdemon17@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reslt = { path = "../" }                            # Reference the dioxus_table library as a local dependency
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.98"
async-std = "1.13.1"


[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
