[package]
name = "reslt_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI tool for adding Reslt components from a registry"
license = "MIT"

[[bin]]
name = "reslt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
anyhow = "1.0.95"
dirs = "5.0.1"
