[package]
name = "reslt_core"
version = "0.1.0"
authors = ["lilidm <lightdemon17@gmail.com>"]
edition = "2024"
description = "Dioxus signal utilities for tables, toasts, modals, and checkboxes"
license = "MIT"
repository = "https://github.com/lidm0707/reslt"
keywords = ["dioxus", "table", "toast", "modal", "signal"]

[dependencies]
async-std = { workspace = true }
dioxus = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
reslt_derive = { version = "0.1.0", path = "../reslt_derive" }

[dev-dependencies]
dioxus-ssr = { workspace = true }
pretty_assertions = { workspace = true }
futures = { workspace = true }

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
