[package]
name = "reslt_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI tool for adding Reslt components from a registry"
license = "MIT"


[dependencies]
quote = "1.0.45"
syn = "2.0.117"
proc-macro2 = "1.0.106"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"

[lib]
proc-macro = true
