[package]
name = "demo_app"
version = "0.0.1"
authors = ["lilidm <lightdemon17@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7" }
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reslt_core = { path = "../../reslt_core" }

chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.95"
async-std = "1.13.1"
uuid = { version = "1.0", features = ["v4", "js"] }

[lib]
doctest = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
